프로토타입 수정 및 추가

--- a/src/status.html
+++ b/src/status.html
@@ -256,6 +256,7 @@
             <a href="components/input.html" target="_blank">Input</a>
             <a href="components/form.html" target="_blank">Form</a>
             <a href="components/etc.html" target="_blank">ETC</a>
+            <a href="components/layout01.html" target="_blank">layout01</a>
 
 			<div>
 				<span>⚫ 작업완료</span>
