--- a/src/html/main.html
+++ b/src/html/main.html
@@ -4,9 +4,9 @@
 @@include('@@webRoot/include/head.html')
 </head>
 <body>
-	<div id="wrap">
+	<div id="wrap" class="main">
 		<!-- header -->
-@@include('@@webRoot/include/header.html', {type: "main"})
+@@include('@@webRoot/include/header.html', {type: "sub_01"})
 		<!-- //header -->
 		
 		<!-- container -->
@@ -47,10 +47,7 @@
 			</div>
 		</section>
 		<!-- //container -->
-
-		<!-- footer -->
-@@include('@@webRoot/include/footer.html')
-		<!-- //footer -->
+		
 	</div>
 
 </body>
