팝업 인클루드 파일 추가

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -29,10 +29,10 @@
 
 				<div class="menu-module">
 					<div class="row">
-						<div class="menu-box box01">쿠폰/이벤트</div>
-						<div class="menu-box box02">제휴혜택</div>
-						<div class="menu-box box03">이용가이드</div>
-						<div class="menu-box box04">고객센터</div>
+						<dib class="menu-box box01">쿠폰/이벤트</dib>
+						<dib class="menu-box box02">제휴혜택</dib>
+						<dib class="menu-box box03">이용가이드</dib>
+						<dib class="menu-box box04">고객센터</dib>
 					</div>
 					<div class="row">
 						<div class="menu-group">
