테이블 넓이 고정

--- a/src/status.html
+++ b/src/status.html
@@ -135,6 +135,18 @@
 				color:#000;
 				background-color:#fc8989;
 			}
+			table tr td:nth-child(1),
+			table tr td:nth-child(2),
+			table tr td:nth-child(3),
+			table tr td:nth-child(4),
+			table tr td:nth-child(5),
+			table tr td:nth-child(6){
+				width:200px
+			}
+			table tr td:nth-child(8){
+				width:250px
+			}
+			
 			table tr.up td {
 				background-color:#ffe9f5;
 			}
@@ -925,7 +937,7 @@
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="html/page/SCR_GA_CI_0401_M01.html">SCR_GA_CI_0401_M01.html</a></td>
+							<td><a target="_blank" href="html/.html">.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
