--- a/src/status.html
+++ b/src/status.html
@@ -937,7 +937,7 @@
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/SCR_GA_CI_0401_M01.html">SCR_GA_CI_0401_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
