--- a/src/status.html
+++ b/src/status.html
@@ -303,8 +303,8 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td>/</td>
-							<td><a target="_blank" href="html/page/SCR_GA_CA_0110_P02.html">SCR_GA_CA_0110_P02.html</a></td>
+							<td>/member</td>
+							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P02.html">SCR_GA_CA_0110_P02.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -316,8 +316,8 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td>/</td>
-							<td><a target="_blank" href="html/page/SCR_GA_CA_0110_P03.html">SCR_GA_CA_0110_P03.html</a></td>
+							<td>/member</td>
+							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P03.html">SCR_GA_CA_0110_P03.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -350,12 +350,12 @@
                         <tr>
 							<td>차량예약</td>
 							<td>예약하기</td>
-							<td></td>
+							<td>[팝업 예시]</td>
 							<td></td>
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/middle_popup_test.html#SCR_GA_CA_0110_P01">SCR_GA_CA_0110_P01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -368,7 +368,7 @@
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/middle_popup_test.html#SCR_GA_CA_0110_P02">SCR_GA_CA_0110_P02.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
