--- a/src/status.html
+++ b/src/status.html
@@ -350,8 +350,8 @@
                         <tr>
 							<td>차량예약</td>
 							<td>예약하기</td>
-							<td>[팝업 예시]</td>
 							<td></td>
+							<td>[팝업 예시]</td>
 							<td></td>
 							<td></td>
 							<td>/</td>
@@ -364,11 +364,11 @@
 							<td></td>
 							<td></td>
 							<td>편도로 변경</td>
-							<td></td>
+							<td>[바텀 레이어 예시]</td>
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="components/middle_popup_test.html#SCR_GA_CA_0110_P02">SCR_GA_CA_0110_P02.html</a></td>
+							<td><a target="_blank" href="components/bottom_layer.html#SCR_GA_CA_0110_P02">SCR_GA_CA_0110_P02.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
