--- a/src/html/popup/SCR_GA_CA_0110_P02.html
+++ b/src/html/popup/SCR_GA_CA_0110_P02.html
@@ -4,7 +4,7 @@
 </div>
 <div class="layer-body">
 	<p>2022.07.01</p>
-	<p>그린카 할인혜택 푸시알림 수신을 동의하셨습니다.</p>
+	<p>그린카 할인혜택 푸시알림 수신을 동의하셨습니다.222333</p>
 	<p>설정&gt;할인혜택 푸시알림 on/off를 통해 수신여부를 변경하실 수 있습니다.</p>
 </div>
 <div class="layer-footer">
