--- a/src/status.html
+++ b/src/status.html
@@ -355,7 +355,12 @@
 							<td></td>
 							<td></td>
 							<td>/</td>
-							<td><a target="_blank" href="components/middle_popup_test.html#SCR_GA_CA_0110_P01">SCR_GA_CA_0110_P01.html</a></td>
+							<!-- 
+								기본 팝업    : components/popup_module.html#SCR_GA_CA_0110_P01
+								바텀 레이어  : components/popup_module.html#SCR_GA_CA_0110_P01#bottom
+								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
+							 -->
+							<td><a target="_blank" href="components/popup_module.html#SCR_GA_CA_0110_P01#full">SCR_GA_CA_0110_P01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
