--- a/src/html/member/SCR_GA_CA_0110_P02.html
+++ b/src/html/member/SCR_GA_CA_0110_P02.html
@@ -13,12 +13,46 @@
 		<section id="container">
 			<div class="contents">
 
-				<div class="member">
+				<div class="member"> 
 					
+					<p class="desc-xl">
+						추천인 아이디를 입력해주세요
+					</p>
+
+					<div class="ip-group">
+						<label for="ip01" class="ip-label">추천인 아이디</label>
+						<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+						<button type="button" class="btn-del">
+							<span class="icon"><i class="ico delete md"></i></span>
+						</button>
+						<div class="line"></div>
+					</div>
+
+					<div class="id-group">
+						<p class="desc">
+							아이디를 선택해주세요
+						</p>
+
+						<div class="list">
+							<div class="item">
+								<a href="#">
+									greencar
+								</a>
+							</div>
+							<div class="item">
+								<a href="#">
+									greencar
+									<span class="lpoint">L.POINT</span>
+								</a>
+							</div>
+						</div>
+
+					</div>
+
 				</div>
 
 			</div>
-			@@include('@@webRoot/include/bot_fix.html')
+			<!-- @@include('@@webRoot/include/bot_fix.html') -->
 		</section>
 		<!-- //container -->
 
