--- a/src/html/member/SCR_GA_CA_0110_P02.html
+++ b/src/html/member/SCR_GA_CA_0110_P02.html
@@ -23,7 +23,8 @@
 						<label for="ip01" class="ip-label">추천인 아이디</label>
 						<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
 						<button type="button" class="btn-del">
-							<span class="icon"><i class="ico delete md"></i></span>
+							<i class="ico delete md"></i>
+							<!-- <i class="ico delete md"></i><span class="text"></span> -->
 						</button>
 						<div class="line"></div>
 					</div>
