--- a/src/html/member/SCR_GA_CA_0110_P03.html
+++ b/src/html/member/SCR_GA_CA_0110_P03.html
@@ -31,7 +31,8 @@
 				</div>
 
 			</div>
-			@@include('@@webRoot/include/bot_fix.html')
+			@@include('@@webRoot/include/bot_fix.html', {type: "type01"})
+			
 		</section>
 		<!-- //container -->
 
