--- a/src/html/member/SCR_GA_CA_0110_P03.html
+++ b/src/html/member/SCR_GA_CA_0110_P03.html
@@ -20,12 +20,14 @@
 					</p>
 
 					<div class="ip-group">
-						<label for="ip01" class="ip-label">프르모션 코드</label>
-						<input id="ip01" type="text" class="ip-txt" placeholder="프르모션 코드 입력">
-						<button type="button" class="btn-del">
-							<span class="icon"><i class="ico delete md"></i></span>
-						</button>
-						<div class="line"></div>
+						<div class="row">
+							<label for="ip01" class="ip-label">프르모션 코드</label>
+							<input id="ip01" type="text" class="ip-txt" placeholder="프르모션 코드 입력">
+							<button type="button" class="icon-group">
+								<span class="icon"><i class="ico delete md"></i></span>
+							</button>
+							<div class="line"></div>
+						</div>
 					</div>
 
 				</div>
