--- a/src/html/member/SCR_GA_CA_0110_P02.html
+++ b/src/html/member/SCR_GA_CA_0110_P02.html
@@ -20,12 +20,16 @@
 					</p>
 
 					<div class="ip-group">
-						<label for="ip01" class="ip-label">추천인 아이디</label>
-						<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-						<button type="button" class="btn-del">
-							<i class="ico delete md"></i>
-						</button>
-						<div class="line"></div>
+						<div class="row error">
+							<label for="ip01" class="ip-label">추천인 아이디</label>
+							<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+							<button type="button" class="icon-group ip-icon">
+								<i class="ico delete md"></i>
+							</button>
+							<div class="line"></div>
+						</div>
+						<p class="error-txt">추천인 아이디가 일치하지 않습니다</p>
+
 					</div>
 
 					<div class="id-group">
