--- a/src/status.html
+++ b/src/status.html
@@ -938,7 +938,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td>/customer</td>
+							<td>/mypage</td>
 							<td><a target="_blank" href="html/.html">.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
