--- a/src/html/member/SCR_GA_CA_0110_P02.html
+++ b/src/html/member/SCR_GA_CA_0110_P02.html
@@ -46,7 +46,7 @@
 							<div class="item">
 								<a href="#">
 									greencar
-									<span class="lpoint">L.POINT</span>
+									<span class="lpoint"><span class="hide-txt">L.point</span></span>
 								</a>
 							</div>
 						</div>
