--- a/src/status.html
+++ b/src/status.html
@@ -131,7 +131,7 @@
 			</div>
         </div>
 		<div class="section" id="menu01" name="menu01">
-			<h2 class="title total">시작하기</h2>
+			<h2 class="title total">회원계정</h2>
 			<div class="content">
 				<table>
 					<thead>
@@ -151,7 +151,7 @@
 					</thead>
 					<tbody>
                         <tr>
-							<td>시작하기</td>
+							<td>회원계정</td>
 							<td>가입완료</td>
 							<td>추천인 입력</td>
 							<td></td>
@@ -159,7 +159,7 @@
 							<td></td>
 							<td>/member</td>
 							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P02.html">SCR_GA_CA_0110_P02.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -172,7 +172,7 @@
 							<td></td>
 							<td>/member</td>
 							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P03.html">SCR_GA_CA_0110_P03.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
