--- a/src/status.html
+++ b/src/status.html
@@ -240,7 +240,7 @@
 							<td>프리존 반납이란?</td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/sSCR_GA_RV_0204_P01.html">SCR_GA_RV_0204_P01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -253,7 +253,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -266,7 +266,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0206_T02.html">SCR_GA_RV_0206_T02.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -279,7 +279,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0206_T03.html">SCR_GA_RV_0206_T03.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -292,7 +292,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0207_M01.html">SCR_GA_RV_0207_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -305,7 +305,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0208_M01.html">SCR_GA_RV_0208_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -318,7 +318,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0209_M01.html">SCR_GA_RV_0209_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -331,7 +331,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0210_M01.html">SCR_GA_RV_0210_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -344,7 +344,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0211_M01.html">SCR_GA_RV_0211_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -357,7 +357,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0212_M01.html">SCR_GA_RV_0212_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -370,7 +370,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/page/reservation/SCR_GA_RV_0213_M01.html">SCR_GA_RV_0213_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
