--- a/src/status.html
+++ b/src/status.html
@@ -214,7 +214,7 @@
 								바텀 레이어  : components/popup_module.html#SCR_GA_CA_0110_P01#bottom
 								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
 							 -->
-							<td><a target="_blank" href="components/popup_module.html#SCR_GA_CA_0110_P01#full">SCR_GA_CA_0110_P01.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_CA_0110_P01#full">SCR_GA_CA_0110_P01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
