--- a/src/status.html
+++ b/src/status.html
@@ -158,7 +158,7 @@
 							<td></td>
 							<td></td>
 							<td>/member</td>
-							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P02.html">SCR_GA_CA_0110_P02.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P02#full">SCR_GA_CA_0110_P02.html</a></td>
 							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
@@ -171,7 +171,7 @@
 							<td></td>
 							<td></td>
 							<td>/member</td>
-							<td><a target="_blank" href="html/member/SCR_GA_CA_0110_P03.html">SCR_GA_CA_0110_P03.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P03#full">SCR_GA_CA_0110_P03.html</a></td>
 							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
@@ -240,7 +240,7 @@
 							<td>프리존 반납이란?</td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0204_P01.html">SCR_GA_RV_0204_P01.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_P01#full">SCR_GA_RV_0204_P01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
