--- a/src/html/member/SCR_GA_CA_0103_M01.html
+++ b/src/html/member/SCR_GA_CA_0103_M01.html
@@ -6,7 +6,10 @@
 <body>
 	<div id="wrap">
 		<!-- header -->
-@@include('@@webRoot/include/header.html', {type: "sub_01"})
+@@include('@@webRoot/include/header.html', {
+	type: "sub_01",
+	title: "약관동의"
+})
 		<!-- //header -->
 		
 		<!-- container -->
