--- a/src/html/member/SCR_GA_CA_0110_P03.html
+++ b/src/html/member/SCR_GA_CA_0110_P03.html
@@ -1,5 +1,8 @@
 <div class="layer-header">
-	@@include('@@webRoot/include/header.html', {type: "sub_pop"})
+	@@include('@@webRoot/include/header.html', {
+		type: "sub_pop",
+		title: false
+	})
 </div>
 
 <div class="layer-body">
