--- a/src/html/reservation/SCR_GA_RV_0204_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_P01.html
@@ -1,6 +1,9 @@
 <div class="layer-header">
 	<!-- 프리존 반납이란? -->
-	@@include('@@webRoot/include/header.html', {type: "sub_pop01"})
+	@@include('@@webRoot/include/header.html', {
+		type: "sub_pop",
+		title: "프리존 반납 안내"
+	})
 </div>
 
 <div class="layer-body">
