--- a/src/status.html
+++ b/src/status.html
@@ -214,7 +214,7 @@
 								바텀 레이어  : components/popup_module.html#SCR_GA_CA_0110_P01#bottom
 								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
 							 -->
-							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0213_M01#bottom">SCR_GA_CA_0110_P01.html</a></td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
@@ -227,8 +227,21 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="components/bottom_layer.html#SCR_GA_CA_0110_P02">SCR_GA_CA_0110_P02.html</a></td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0203_M01.html">SCR_GA_RV_0203_M01.html</a></td>
 							<td class="stat"></td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td>프리존 반납 </td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0204_M01.html">SCR_GA_RV_0204_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -241,7 +254,20 @@
 							<td></td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_P01#full">SCR_GA_RV_0204_P01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td>그린존 반납  </td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0205_M01.html">SCR_GA_RV_0205_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
