데이터 없을 때 추가

--- a/src/html/reservation/SCR_GA_RV_0204_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_M01.html
@@ -19,6 +19,11 @@
 				<div class="reservation">
 					
 					<div class="search-result">
+						
+						<div class="no-data">
+							<p class="desc">표시할 내용이 없습니다</p>
+						</div>
+
 						<ul>
 							<li>
 								<a href="#">
