--- a/src/html/reservation/SCR_GA_RV_0205_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0205_M01.html
@@ -29,6 +29,10 @@
 							<button type="button" class="btn line xs">지하철</button>
 						</div>
 					</div>
+
+					<div class="no-data">
+						<p class="desc">표시할 내용이 없습니다</p>
+					</div>
 					
 					<div class="search-result greenzon">
 						<ul>
