popup layer  수정

--- a/src/status.html
+++ b/src/status.html
@@ -212,6 +212,7 @@
 							<!-- 
 								기본 팝업    : components/popup_module.html#SCR_GA_CA_0110_P01
 								바텀 레이어  : components/popup_module.html#SCR_GA_CA_0110_P01#bottom
+								드래그 바텀 레이어  : components/popup_module.html#SCR_GA_CA_0110_P01#bottom#drag
 								풀 팝업      : components/popup_module.html#SCR_GA_CA_0110_P01#full
 							 -->
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
