--- a/src/html/reservation/SCR_GA_RV_0210_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0210_M01.html
@@ -17,29 +17,41 @@
                             <div class="agreement">
                                 <div class="item check-all">
                                     <label for="tmpCheckbook1" class="gc-checkbox round">
-                                        <input type="checkbox" id="tmpCheckbook1">
+                                        <input type="checkbox" id="tmpCheckbook1" />
                                         <span>모든 약관에 동의</span>
                                     </label>
                                 </div>
-                                <div class="item">
-                                    <label>자동차 대여약관 </label>
-                                    <button class="btn icon"><i class="ico next-sm md"></i></button>
-                                </div>
-                                <div class="item">
-                                    <label>위치정보 사업자 이용약관 </label>
-                                    <button class="btn icon"><i class="ico next-sm md"></i></button>
-                                </div>
-                                <div class="item">
-                                    <label>개인정보 처리방침(취급위탁) </label>
-                                    <button class="btn icon"><i class="ico next-sm md"></i></button>
-                                </div>
-                                <div class="item">
-                                    <label>개인정보 처리방침(제3자 제공) </label>
-                                    <button class="btn icon"><i class="ico next-sm md"></i></button>
-                                </div>
-                                <div class="item">
-                                    <label>차량 대여 서비스 제공(개인정보 수집/이용) </label>
-                                    <button class="btn icon"><i class="ico next-sm md"></i></button>
+                                <div class="inner">
+                                    <div class="item">
+                                        <button>
+                                            <span class="text">자동차 대여약관 </span>
+                                            <i class="ico next-sm md"></i>
+                                        </button>
+                                    </div>
+                                    <div class="item">
+                                        <button>
+                                            <span class="text">위치정보 사업자 이용약관</span>
+                                            <i class="ico next-sm md"></i>
+                                        </button>
+                                    </div>
+                                    <div class="item">
+                                        <button>
+                                            <span class="text">개인정보 처리방침(취급위탁)</span>
+                                            <i class="ico next-sm md"></i>
+                                        </button>
+                                    </div>
+                                    <div class="item">
+                                        <button>
+                                            <span class="text">개인정보 처리방침(제3자 제공)</span>
+                                            <i class="ico next-sm md"></i>
+                                        </button>
+                                    </div>
+                                    <div class="item">
+                                        <button>
+                                            <span class="text">차량 대여 서비스 제공(개인정보 수집/이용)</span>
+                                            <i class="ico next-sm md"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
