--- a/src/status.html
+++ b/src/status.html
@@ -249,6 +249,19 @@
 						<tr>
 							<td></td>
 							<td></td>
+							<td>프리존 반납 </td>
+							<td>프리존 설정</td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_M01_P01#bottom#drag">SCR_GA_RV_0204_M01_P01.html</a></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
 							<td></td>
 							<td>프리존 반납이란?</td>
 							<td></td>
@@ -268,6 +281,19 @@
 							<td></td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0205_M01.html">SCR_GA_RV_0205_M01.html</a></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>그린존 설정</td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0205_M01_P01#bottom#drag">SCR_GA_RV_0205_M01_P01.html</a></td>
 							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
