공통 수정중

--- a/src/html/member/SCR_GA_CA_0110_P03.html
+++ b/src/html/member/SCR_GA_CA_0110_P03.html
@@ -32,7 +32,7 @@
 	<div class="btn-wrap">
 		<!-- column 클레스 적용하면 col 스타일 적용 -->
 		<div class="btn-group">
-			<button type="button" class="btn primary xl full black">등록하기</button>
+			<button type="button" disabled class="btn xl full">등록하기</button>
 		</div>
 	</div>
 </div>
