--- a/src/status.html
+++ b/src/status.html
@@ -159,9 +159,9 @@
 							<td></td>
 							<td>/member</td>
 							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P02#full">SCR_GA_CA_0110_P02.html</a></td>
-							<td class="stat">⚫</td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
-							<td></td>
+							<td>앱</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -172,9 +172,9 @@
 							<td></td>
 							<td>/member</td>
 							<td><a target="_blank" href="components/popup_module.html#member#SCR_GA_CA_0110_P03#full">SCR_GA_CA_0110_P03.html</a></td>
-							<td class="stat">⚫</td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
-							<td></td>
+							<td>앱</td>
 						</tr>
                     </tbody>
                 </table>
