예약하기 화면 -- 작업 중

--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -22,7 +22,6 @@
                                 <li><a href="#">KT멤버십</a></li>
                                 <li><a href="#">T멤버십</a></li>
                             </ul>
-                            <span class="tab-indicator"></span>
                         </div>
                         <div class="cont coupon">
                             <section class="section">
@@ -31,7 +30,7 @@
                                     <div class="ip-group">
                                         <div class="row">
                                             <input type="text" placeholder="쿠폰 번호 입력" />
-                                            <button class="btn primary lg"><span class="text">등록</span></button>
+                                            <button class="btn primary md"><span class="text">등록</span></button>
                                         </div>
                                     </div>
                                 </div>
@@ -91,8 +90,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button class="btn-sort">
-                                    <i class="ico sort md"></i>
+                                <button class="btn-filter">
+                                    <i class="ico filter md"></i>
                                     <span class="text">혜택순</span>
                                 </button>
                             </section>
