--- a/src/html/reservation/SCR_GA_RV_0212_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0212_M01.html
@@ -12,7 +12,7 @@
 <div class="layer-footer">
     <div class="btn-wrap">
         <div class="btn-group single">
-            <button type="button" class="btn primary lg">서약합니다</button>
+            <button type="button" class="btn primary md">서약합니다</button>
         </div>
     </div>
 </div>
