--- a/src/html/reservation/SCR_GA_RV_0206_T03.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03.html
@@ -6,12 +6,15 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', {type: "sub_01"})
+            @@include('@@webRoot/include/header.html', {
+                type: "sub_02",
+                title: "할인/적립"
+            })
             <!-- //header -->
 
             <!-- container -->
             <section id="container">
-                <div class="contents" style="height: 3000px">
+                <div class="contents">
                     <div class="reservation">
                         <div class="gc-tab">
                             <ul>
@@ -19,30 +22,10 @@
                                 <li><a href="#">KT멤버십</a></li>
                                 <li><a href="#" class="active">T멤버십</a></li>
                             </ul>
-                            <span class="tab-indicator"></span>
                         </div>
-                        <div class="wrap">
-                            <div class="st-">
-                                <a href="#">카드 신청</a>
-                                <a href="#">비밀번호 등록/수정</a>
-                            </div>
-							<section class="membership">
-                                <div class="membership-area">
-                                    <button class="btn secondary lg">
-                                        <i class="ico add md"></i>
-                                        <span class="text">등록하기</span>
-                                    </button>
-                                </div>
-                            </section>
-                            <section>
-                                <div class="guide">
-
-                                </div>
-                            </section>
-						</div>
+                    <div class="cont t-mem"></div>
                     </div>
                 </div>
-                @@include('@@webRoot/include/bot_fix.html', {type: "type01"})
             </section>
             <!-- //container -->
         </div>
