--- a/src/html/reservation/SCR_GA_RV_0208_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0208_M01.html
@@ -1,36 +1,46 @@
-<div class="layer-header">
-	<h5>보험료 안내</h5>
-	<button type="button" class="layer-close" onclick="closeLayerPopup(this);">닫기</button>
-</div>
-<div class="layer-body">
-	<p>
-		예약한 시간만큼 보험료가 부과되며, 보장 내용은 아래와 같습니다.
-	</p>
-	<div class="">
-		<strong>자동차종합보험</strong>
-		<ul>
-			<li>대인배상 무한</li>
-			<li>대물배상 1억원</li>
-			<li>자기신체사고 1천5백만원</li>
-		</ul>
-	</div>
-	<div class="">
-		<strong>자차면책보험료</strong>
-		<ul>
-			<li>사고 1건당 자차면책보험료 5만원 또는 30만원 또는 70만원 
-				중 선택 가능 (보험료 차등 할인)</li>
-		</ul>
-	</div>
-	<div class="">
-		<ul>
-			<li>차량 수리기간 동안의 영업 손실에 대해, 기준 대여요금의 50%를 휴차 보장료로 별도 청구. 
-				수리기간 또는 재구매 및 등록에 소요되는 기간에 따라 부과 가능함</li>
-			<li>보험료는 포인트/쿠폰 사용 제외</li>
-			<li>무료편도/시승이벤트 상품은 보험료 무료이나 사고발생 시 자차면책료 30만원 책정
-			</li>
-			<li>조기반납 시 보험료는 환급되지 않음</li>
-		</ul>
-	</div>
-</div>
+<!DOCTYPE html>
+<html lang="ko">
+    <head>
+        @@include('@@webRoot/include/head.html')
+    </head>
+    <body>
+        <div id="wrap">
+            <!-- header -->
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "보험료 안내" })
+            <!-- //header -->
 
-</div>
+            <!-- container -->
+            <section id="container">
+                <div class="contents">
+                    <div class="reservation">
+                        <section>
+                            <h2>보험료 안내</h2>
+                            <p>예약한 시간만큼 보험료가 부과되며, 보장 내용은 아래와 같습니다.</p>
+                            <h3>자동차종합보험</h3>
+                            <ul class="list">
+                                <li>대인배상 무한</li>
+                                <li>대물배상 1억원</li>
+                                <li>자기신체사고 1천5백만원</li>
+                            </ul>
+                            <h3>자차면책보험료</h3>
+                            <ul class="list">
+                                <li>사고 1건당 자차면책보험료 5만원 또는 30만원 또는 70만원 중 선택 가능 (보험료 차등 할인)</li>
+                            </ul>
+                        </section>
+                        <hr class="divider" />
+                        <section>
+                            <h2>유의사항</h2>
+                            <ul class="list">
+                                <li>차량 수리기간 동안의 영업 손실에 대해, 기준 대여요금의 50%를 휴차 보장료로 별도 청구. 수리기간 또는 재구매 및 등록에 소요되는 기간에 따라 부과 가능함</li>
+                                <li>보험료는 포인트/쿠폰 사용 제외</li>
+                                <li>무료편도/시승이벤트 상품은 보험료 무료이나 사고발생 시 자차면책료 30만원 책정</li>
+                                <li>조기반납 시 보험료는 환급되지 않음</li>
+                            </ul>
+                        </section>
+                    </div>
+                </div>
+            </section>
+            <!-- //container -->
+        </div>
+    </body>
+</html>
