--- a/src/html/reservation/SCR_GA_RV_0213_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0213_M01.html
@@ -1,9 +1,9 @@
 <div class="layer-header">
-	<h5>예약결제 안내</h5>
-	<button type="button" class="layer-close" onclick="closeLayerPopup(this);">닫기</button>
+	<h5 class="title">예약결제 안내</h5>
+	<button type="button" class="layer-close" >닫기</button>
 </div>
 <div class="layer-body">
-	<p>차량예약 및 요금결제를 <br>진행하시겠습니까?</p>
+	<p>차량예약 및 요금결제를 진행하시겠습니까?</p>
 	<div class="box">
 		<ul class="desc-list">
 			<li>
@@ -24,9 +24,8 @@
 <div class="layer-footer">
 	<div class="btn-wrap">
 		<div class="btn-group">
-			<button type="button" class="btn secondary lg">아니오</button>
-			<button type="button" class="btn primary lg">예약하기</button>
+			<button type="button" class="btn secondary md">아니오</button>
+			<button type="button" class="btn md">예약하기</button>
 		</div>
 	</div>
-</div>
 </div>
